syntax = "proto3";
option csharp_namespace = "WOClient.Library.Api.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service Tasks {
	rpc AddTask (TaskInput) returns (google.protobuf.Int32Value);
	rpc DeleteTask (google.protobuf.Int32Value) returns (google.protobuf.Empty);
	rpc GetMyTasks (google.protobuf.Int32Value) returns (stream TaskOutput);
    rpc GetTrackingTasks (google.protobuf.Int32Value) returns (stream TaskOutput);
}

message TaskInput {
	int32 managerId                      = 1;
	int32 assignedEmployee               = 2;
	google.protobuf.Timestamp createDate = 3;
	string description                   = 4;
	google.protobuf.Timestamp finalDate  = 5;
	string priority                      = 6;
	string subject                       = 7;
}

message TaskOutput {
	int32 taskId                          = 1;
	google.protobuf.Timestamp finalDate   = 2;
	string priority                       = 3;
	string description                    = 4;
	string subject                        = 5;
	bool   isCompleted					  = 6;
	bool   IsArchive					  = 7;
	int32  employeeId					  = 8;
	google.protobuf.Timestamp createdDate = 9;
}
