syntax = "proto3";
option csharp_namespace = "WOServer.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service Users {
	rpc Register (RegisterInput) returns (google.protobuf.Int32Value);
	rpc LoginRequset (LoginInput) returns (UserData);
	rpc DeleteEmployee (PersonIdInput) returns (google.protobuf.Empty);
	rpc GetEmployees (PersonIdInput) returns (stream UserData);
	rpc UpdateStringField (UpdateStringFieldInput) returns (google.protobuf.Empty);
	rpc UpdateIntField (UpdateIntFieldInput) returns (google.protobuf.Empty);
	rpc IsMailExist (google.protobuf.StringValue) returns (google.protobuf.BoolValue);
}

message PersonIdInput {
	int32 personId = 1;
}

message LoginInput {
	string email    = 1;
	string password = 2;
}

message RegisterInput {
	string firstName    = 1;
	string lastName     = 2;
	string email        = 3;
	string password     = 4;
	string permission   = 5;
	int32 directManager = 6;
}

message UserData {
	int32 id            = 1;
	string email        = 2;
	string firstName    = 3;
	string lastName     = 4;
	string permission   = 5;
	int32 directManager = 6;
}

message UpdateStringFieldInput {
	int32 personId    = 1;
	string newValue   = 2;
	string columnName = 3;
}

message UpdateIntFieldInput {
	int32 personId    = 1;
	int32 newValue    = 2;
	string columnName = 3;
}
